Some more information added

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
             animation: spin 1s linear infinite;
             margin: 20px auto;
         }
+        .items-center {
+            display: flex;
+            align-items: center;
+            padding-top: 10px;
+        }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
@@ -62,6 +67,13 @@
         const Plane = ({ className }) => (
             <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
+            </svg>
+        );
+
+        const Booking = ({ className }) => (
+            <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M7 2a2 2 0 00-2 2v16a2 2 0 002 2h10a2 2 0 002-2V8l-6-6H7z" />
+            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M14 3v5h5" />
             </svg>
         );
         
@@ -129,6 +141,11 @@
                     case 'hotel': return React.createElement(Hotel, { className: "w-4 h-4" });
                     case 'airport': return React.createElement(Plane, { className: "w-4 h-4" });
                     case 'car': return React.createElement(Car, { className: "w-4 h-4" });
+                    case 'restaurant': return (
+                        <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 10h16M4 6h16M4 14h16M4 18h16" />
+                        </svg>
+                    );
                     default: return React.createElement(MapPin, { className: "w-4 h-4" });
                 }
             };
@@ -290,6 +307,89 @@
                                     )}
                                 </div>
 
+                                {/* Addresses Section */}
+                                <div className="lg:col-span-1">
+                                    <h3 className="text-lg font-semibold text-gray-900 mb-4">Locations & Addresses</h3>
+                                    <div className="space-y-3">
+                                        {activeDestination.addresses.map((address, index) => (
+                                            <div key={index} className="bg-white p-4 rounded-lg shadow-md border border-gray-200 hover:shadow-lg transition-shadow">
+                                                <div className="flex items-start space-x-3">
+                                                    {getIcon(address.type)}
+                                                    <div className="flex-1">
+                                                        <h3 className="font-semibold text-gray-900 mb-1">{address.name}</h3>
+                                                        <p className="text-sm text-gray-600 mb-2">{address.address}</p>
+                                                                                                                
+                                                        {address.bookingReference && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                🧳 Booking Reference: {address.bookingReference}
+                                                            </p>
+                                                        )}
+                                                        {address.route && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                ✈️ Route: {address.route}
+                                                            </p>
+                                                        )}
+                                                        {address.airline && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                ✈️ Airline: {address.airline}
+                                                            </p>
+                                                        )}
+                                                        {address.departure && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                ✈️ Departure: {address.departure}
+                                                            </p>
+                                                        )}
+                                                        {address.arrival && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                ✈️ Arrival: {address.arrival}
+                                                            </p>
+                                                        )}
+                                                        {address.flightTime && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                ✈️ Flight Time: {address.flightTime}
+                                                            </p>
+                                                        )}
+                                                        {address.distanceFromAirport && (
+                                                            <p className="text-xs text-blue-600 mb-2">
+                                                                ✈️ {address.distanceFromAirport} from airport
+                                                            </p>
+                                                        )}
+                                                        <a
+                                                            href={address.mapLink}
+                                                            target="_blank"
+                                                            rel="noopener noreferrer"
+                                                            className="inline-flex items-center space-x-1 text-blue-600 hover:text-blue-800 text-sm"
+                                                        >
+                                                            {React.createElement(MapPin, { className: "w-3 h-3" })}
+                                                            <span>View on Maps</span>
+                                                        </a>
+                                                        {address.phone && (
+                                                            <a 
+                                                            href={'tel:' + address.phone}
+                                                            className="text-blue-600 hover:text-blue-800 flex items-center space-x-1"
+                                                            >
+                                                            {React.createElement(Phone, { className: "w-3 h-3" })}
+                                                            <span className="text-sm">{address.phone}</span>
+                                                        </a>
+                                                        )}
+                                                        {address.confirmationPage && (
+                                                            <a
+                                                                href={address.confirmationPage}
+                                                                target="_blank"
+                                                                rel="noopener noreferrer"
+                                                                className="text-blue-600 hover:text-blue-800 flex items-center space-x-1"
+                                                            >
+                                                                {React.createElement(Booking, { className: "w-3 h-3" })}
+                                                                <span className="text-sm">View Booking Confirmation</span>
+                                                            </a>
+                                                        )}
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        ))}
+                                    </div>
+                                </div>
+
                                 {/* Contacts Section */}
                                 <div className="lg:col-span-1">
                                     <h3 className="text-lg font-semibold text-gray-900 mb-4">Important Contacts</h3>
@@ -314,37 +414,6 @@
                                     </div>
                                 </div>
 
-                                {/* Addresses Section */}
-                                <div className="lg:col-span-1">
-                                    <h3 className="text-lg font-semibold text-gray-900 mb-4">Locations & Addresses</h3>
-                                    <div className="space-y-3">
-                                        {activeDestination.addresses.map((address, index) => (
-                                            <div key={index} className="bg-white p-4 rounded-lg shadow-md border border-gray-200 hover:shadow-lg transition-shadow">
-                                                <div className="flex items-start space-x-3">
-                                                    {getIcon(address.type)}
-                                                    <div className="flex-1">
-                                                        <h3 className="font-semibold text-gray-900 mb-1">{address.name}</h3>
-                                                        <p className="text-sm text-gray-600 mb-2">{address.address}</p>
-                                                        {address.distanceFromAirport && (
-                                                            <p className="text-xs text-blue-600 mb-2">
-                                                                ✈️ {address.distanceFromAirport} from airport
-                                                            </p>
-                                                        )}
-                                                        <a
-                                                            href={address.mapLink}
-                                                            target="_blank"
-                                                            rel="noopener noreferrer"
-                                                            className="inline-flex items-center space-x-1 text-blue-600 hover:text-blue-800 text-sm"
-                                                        >
-                                                            {React.createElement(MapPin, { className: "w-3 h-3" })}
-                                                            <span>View on Maps</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        ))}
-                                    </div>
-                                </div>
                             </div>
                         </main>
                     )}
