Updated airport codes and removing Miami airport from the list

--- a/public/index.html
+++ b/public/index.html
@@ -321,37 +321,37 @@
                                                                                                                 
                                                         {address.bookingReference && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                🧳 Booking Reference: {address.bookingReference}
+                                                                🧳 <b>Booking Reference:</b> {address.bookingReference}
                                                             </p>
                                                         )}
                                                         {address.route && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                ✈️ Route: {address.route}
+                                                                ✈️ <b>Route:</b> {address.route}
                                                             </p>
                                                         )}
                                                         {address.airline && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                ✈️ Airline: {address.airline}
+                                                                ✈️ <b>Airline:</b> {address.airline}
                                                             </p>
                                                         )}
                                                         {address.departure && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                ✈️ Departure: {address.departure}
+                                                                ✈️ <b>Departure:</b> {address.departure}
                                                             </p>
                                                         )}
                                                         {address.arrival && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                ✈️ Arrival: {address.arrival}
+                                                                ✈️ <b>Arrival:</b> {address.arrival}
                                                             </p>
                                                         )}
                                                         {address.flightTime && (
                                                             <p className="text-sm text-gray-600 mb-2">
-                                                                ✈️ Flight Time: {address.flightTime}
+                                                                ✈️ <b>Flight Time:</b> {address.flightTime}
                                                             </p>
                                                         )}
                                                         {address.distanceFromAirport && (
                                                             <p className="text-xs text-blue-600 mb-2">
-                                                                ✈️ {address.distanceFromAirport} from airport
+                                                                ✈️ <b>{address.distanceFromAirport}</b> from airport
                                                             </p>
                                                         )}
                                                         <a
