--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,9 @@
             </svg>
         );
         
-        const Cloud = ({ className }) => (
+        const User = ({ className }) => (
             <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
+            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M5.121 17.804A4 4 0 0112 15a4 4 0 016.879 2.804M15 7a3 3 0 11-6 0 3 3 0 016 0z" />
             </svg>
         );
 
@@ -146,6 +146,7 @@
                             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 10h16M4 6h16M4 14h16M4 18h16" />
                         </svg>
                     );
+                    case 'user': return React.createElement(User, { className: "w-4 h-4" });
                     default: return React.createElement(MapPin, { className: "w-4 h-4" });
                 }
             };
@@ -337,6 +338,16 @@
                                                         {address.dropOff && (
                                                             <p className="text-sm text-gray-600 mb-2">
                                                                 🚗 <b>Drop-off:</b> {address.dropOff}
+                                                            </p>
+                                                        )}
+                                                        {address.checkIn && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                🏨 <b>Check-in:</b> {address.checkIn}
+                                                            </p>
+                                                        )}
+                                                        {address.checkOut && (
+                                                            <p className="text-sm text-gray-600 mb-2">
+                                                                🏨 <b>Check-out:</b> {address.checkOut}
                                                             </p>
                                                         )}
                                                         {address.route && (
