--- a/public/index.html
+++ b/public/index.html
@@ -426,8 +426,9 @@
                                         ))}
                                     </div>
                                 </div>
+                                
 
-                                {/* Contacts Section */}
+                                {activeDestination.contacts.length > 0 && (
                                 <div className="lg:col-span-1">
                                     <h3 className="text-lg font-semibold text-gray-900 mb-4">Important Contacts</h3>
                                     <div className="space-y-3">
@@ -450,8 +451,9 @@
                                         ))}
                                     </div>
                                 </div>
-
+                                )}
                             </div>
+                            
                         </main>
                     )}
                 </div>
